# bitget-arbitrage-bot

./: .gitignore  Cargo.toml  config.toml  tokens.txt
scripts/: pre-commit.sh  setup-hooks.sh
src/: algorithm.rs  api_client.rs  balance_updater.rs  bitget.rs  compensator.rs  config.rs  error.rs  lib.rs  main.rs  order_watcher.rs  orderbook.rs  position_manager.rs  private_connector.rs  state.rs  trading_logic.rs  types.rs  utils.rs  view_model.rs
src/connectors/: bitget.rs
